--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadoras GIP Ecommerce</title>
+    <title>Calculadoras GIP</title>
     <!-- Ícone do site -->
     <link rel="icon" type="image/png" href="https://i.postimg.cc/cHpqQ3Rs/calculadora.png">
     <link rel="apple-touch-icon" href="https://i.postimg.cc/cHpqQ3Rs/calculadora.png">
